--- a/BookShop/Views/Shared/_LayoutUser.cshtml
+++ b/BookShop/Views/Shared/_LayoutUser.cshtml
@@ -42,6 +42,7 @@
 					<a class="fas fa-user"></a>
 					<div class="login-dropdow-content">
 						<a class="login-dropdow-content-title" asp-area="Identity" asp-page="/Account/Manage/Index">@UserManager.GetUserName(User)!</a>
+						<a class="login-dropdow-content-title" asp-controller="Home" asp-action="Profile">Profile</a>
 						@*<a class="login-dropdow-content-title" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">Logout</a>*@
 						<div class="aligns-items-center justify-content-center">
 							<form class="login-dropdow-content-title aligns-items-center justify-content-center" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
